--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <body>
         <form class="row g-3 justify-content-center my-3" novalidate>
             <div class="col-8">
-                <label for="buttonPali" class="form-label">Scopri se la tua parola è palidroma</label>
-                <input type="text" class="form-control" id="buttonPali" placeholder="Inserisci una parola..." required>
+                <label for="wordPali" class="form-label">Scopri se la tua parola è palidroma</label>
+                <input type="text" class="form-control" id="wordPali" placeholder="Inserisci una parola..." required>
             </div>
             
             <div class="col-8">
                 <button class="btn btn-primary" type="submit">Check</button>
             </div>
+
+            <div class="col-8 targetPali"></div>
         </form>
 
         
