recupero gli elementi dal dom

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     
     <body>
-        <form class="row g-3 justify-content-center my-3">
+        <form class="form row g-3 justify-content-center my-3">
             <div class="col-9">
                 <label for="wordPali" class="form-label">Scopri se la tua parola è palidroma</label>
                 <input type="text" class="form-control" id="wordPali" placeholder="Inserisci una parola..." required>
