--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
 
             <div class="col-3">
-              <button class="btn btn-primary" type="submit">Submit form</button>
+              <button class="btn btn-primary" type="submit">Gioca!</button>
             </div>
 
             <div class="col-9 targetEvenOdd"></div>
